[tool.poetry]
name = "lakescum"
version = "0.1.3"
description = "A Python pacakge to help Databricks Unity Catalog users to read and query Delta Lake tables with `Polars`, `DuckDb`, or `PyArrow`."
authors = ["Daniel Beach <dancrystalbeach@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
polars = "^0.20.16"
deltalake = "^0.16.2"
pyarrow = "^15.0.2"
duckdb = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
